Fix SocialMedia layout problem in Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -97,14 +97,14 @@ html, body {width:100%; height:100%; padding:0px; margin:0px;overflow:hidden; fo
 #socialMedia_search .ui-btn-text span {margin-left:5px; }
 #socialMedia_search .ui-btn-text img {width:15px; display:none;}
 
-#socialMedia_mapType {padding:5px; margin-top:10px;  display:none;}
+#socialMedia_mapType {padding:5px; margin-top:10px;  display:none; height:48px;}
 #socialMedia_mapType label {float:right; color:#ffffff; font-size:13px; padding-top:10px; }
 #socialMedia_mapType > div {float:right; margin-left:10px; }
 
 #socialMedia_result {display:none; height: 82%;}
 #socialMedia_result .ui-li-thumb {width:75px; height:75px; -moz-border-radius:5px; -webkit-border-radius:5px;border-radius:5px;}
 #socialMedia_result .ui-li-heading {position:absolute; top:5px; left:100px; }
-#socialMedia_result ul {height:100%; overflow-y:auto; overflow-x:hidden; margin-top:15px; }
+#socialMedia_result ul {height:100%; width:100%; overflow-y:auto; overflow-x:hidden; margin-top:15px; }
 .socialMedia_description {position:absolute; top:50px; left:100px; }
 
 #socialMedia_gallery {width:100%; height:90%; margin-top:10px; display:none; }
